--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# VS Code/settings
+.vscode/
+settings.json
+settings_глобальные.json
+settings_для_проекта.json
